# file_type_finder

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  request_content_type_finder.py  setup.cfg
src/: content_type.json  file_signatures.json  finder.py  test.ipynb
